--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
   },
   "dependencies": {
     "@apollo/server": "^4.10.0",
+    "@aws-sdk/client-s3": "^3.509.0",
+    "@aws-sdk/s3-request-presigner": "^3.509.0",
     "@prisma/client": "^5.8.1",
     "@types/jsonwebtoken": "^9.0.5",
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2"
   }
 }
